--- a/notebooks/2_semantic_search.ipynb
+++ b/notebooks/2_semantic_search.ipynb
@@ -60,7 +60,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "c12182ab",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
@@ -2713,79 +2717,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "62e28784",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a125fe7d42ca4151b79fabe5327cb28d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading readme:   0%|          | 0.00/6.57k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55ad573dff6b44d48b43063c31874f06",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/3.69M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1215cdeb87dd463f87a9f0a78105759b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/1.26M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "127817fc4d334b478a64b4d3c0cc0729",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split:   0%|          | 0/9427 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aff9544afa2c4c8c82fbb5b8b988f1cb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating validation split:   0%|          | 0/3270 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jinkookchoi/dev/lecture/quick-start-guide-to-llms/.venv/lib/python3.10/site-packages/threadpoolctl.py:1214: RuntimeWarning: \n",
+      "Found Intel OpenMP ('libiomp') and LLVM OpenMP ('libomp') loaded at\n",
+      "the same time. Both libraries are known to be incompatible and this\n",
+      "can cause random crashes or deadlocks on Linux when loaded in the\n",
+      "same Python program.\n",
+      "Using threadpoolctl may cause crashes or deadlocks. For more\n",
+      "information and possible workarounds, please see\n",
+      "    https://github.com/joblib/threadpoolctl/blob/master/multiple_openmp.md\n",
+      "\n",
+      "  warnings.warn(msg, RuntimeWarning)\n"
+     ]
     }
    ],
    "source": [
@@ -2793,6 +2743,27 @@
     "from evaluate import load\n",
     "\n",
     "dataset = load_dataset(\"boolq\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c45124d3-f49a-40a8-9b83-bef649ccbca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9427, 3270)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset['train']), len(dataset['validation'])"
    ]
   },
   {
@@ -2973,8 +2944,13 @@
     "#  and the only major time difference will be in the re-ranking\n",
     "\n",
     "for question in tqdm(val_sample['question']):\n",
+    "    # 쿼리 결과 해시 \n",
     "    retrieved_hash = get_results_from_pinecone(question, top_k=1, re_rank=False, verbose=False)[0]['id']\n",
+    "\n",
+    "    # 문제 해시 \n",
     "    correct_hash = q_to_hash[question]\n",
+    "\n",
+    "    # 같다면 True\n",
     "    predictions.append(retrieved_hash == correct_hash)\n",
     "    \n",
     "accuracy = sum(predictions)/len(predictions)\n",
@@ -3019,6 +2995,8 @@
     "#  and the only major time difference will be in the re-ranking\n",
     "\n",
     "for question in tqdm(val_sample['question']):\n",
+    "    # re_rank = True 설정\n",
+    "    # 설정 여부에 따라 소요 시간 차이가 날 듯\n",
     "    retrieved_hash = get_results_from_pinecone(question, top_k=3, re_rank=True, verbose=False)[0]['id']\n",
     "    correct_hash = q_to_hash[question]\n",
     "    predictions.append(retrieved_hash == correct_hash)\n",
